--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "node start.js",
     "debug": "node --debug-brk=5858 --nolazy start.js",
     "test": "node_modules/.bin/mocha --require test/support/env --reporter spec --bail --check-leaks test/"
+	"postinstall": "bower install"
   },
   "files": [
     "LICENSE",
@@ -60,6 +61,7 @@
     "unirest": "^0.4.2",
     "url": ">= 0.10.2",
     "util": ">= 0.10.3",
+	"bower": "^1.6.5",
     "ws": "^0.8.0"
   },
   "devDependencies": {
