--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "node start.js",
     "debug": "node --debug-brk=5858 --nolazy start.js",
-    "test": "node_modules/.bin/mocha --require test/support/env --reporter spec --bail --check-leaks test/"
+    "test": "node_modules/.bin/mocha --require test/support/env --reporter spec --bail --check-leaks test/",
 	"postinstall": "bower install"
   },
   "files": [
